2008-06-28  Andreas Kirschbaum

	* Deactivate command input on ESC key.

2008-06-27  Andreas Kirschbaum

	* Activate command input on ' key.

2008-06-26  Andreas Kirschbaum

	* Accelerate log window updates.

	* Add metaserver2 support; remove metaserver1 support.

	* Remove %A (ip address) format in text fields. Add %A (archbase),
	%E (codebase), and %M (mapbase) formats.

2008-06-25  Andreas Kirschbaum

	* Make DELETE key work in text input fields.

2008-06-20  Andreas Kirschbaum

	* Move default key bindings to .skin files.

	* Unbinding a key reactivates the default key binding.

	* Implement bind -e.

2008-06-15  Andreas Kirschbaum

	* Implement resolution 1600x1600; this allows the maximum view
	size current Crossfire servers support.

2008-06-13  Andreas Kirschbaum

	* Implement command history for all text input fields.

2008-06-12  Andreas Kirschbaum

	* Display resistance values as numbers in protections dialog.

	* Allow key bindings to TAB key.

2008-06-01  Andreas Kirschbaum

	* Fix crash while editing command input.

	* Reset map view when connecting to a server.

2008-05-15  Andreas Kirschbaum

	* Auto-elect the default server entry even if not visible
	initially.

	* Improve tooltips for hp/sp/grace/food/experience gauges.

	* Include item weight and cursed/damned/magic/blessed/unpaid
	information in item tooltips.

	* Replace cursed/damned/magic/blessed markers with icon background
	colors.

	* Highlight magical, blessed, and unpaid items in inventory and
	ground view.

2008-05-14  Andreas Kirschbaum

	* Add support for different icons for cursed and damned items.

	* Accelerate face loading.

	* Change syntax of "item" skin commands.

2008-05-12  Andreas Kirschbaum

	* Highlight damned items in inventory and ground view.

	* Rewrite the face caching code to remove lags when loading (many)
	images after entering a new map. Now all image loading is executed
	asynchronously to the main rendering loop.

2008-05-06  Andreas Kirschbaum
