@@ -55,6 +55,7 @@ button metaup      270 250  20 25 metaup              metaup              true c
 button metadown    270 455  20 25 metadown            metadown            true command_metadown
 
 set_default metaurl
+#set_forced_active metaurl
 
 key code UP        0 exec command_metaprev
 key code DOWN      0 exec command_metanext
