@@ -6,3 +6,4 @@ label_query message 35  60 180 32 font_stats13 WHITE
 query_text input  50 100 132 20 textarea_medium_active textarea_medium_inactive font_metaurl16 GRAY WHITE 0
 
 set_default input
+set_forced_active input
