@@ -1,3 +1,8 @@
+2008-07-01  Andreas Kirschbaum
+
+	* Add "set_forced_active" skin command. It forces the named gui
+	element to be always active.
+
 2008-06-28  Andreas Kirschbaum
 
 	* Deactivate command input on ESC key.
